# cribbit

./: .gitignore  README.md  meson.build
cli/: main.c  meson.build
include/cribbit/: cribbit.h  shared.h
include/cribbit/ribbit/: ribbit_client.h
include/cribbit/tact/: tact_pipe_file.h
src/: cribbit.c  cribbit_empty.h  meson.build
src/feature/: cribbit_io.h  cribbit_string.h  io.h  string.h
src/ribbit/: ribbit_client.c  ribbit_shared.c  ribbit_shared.h  ribbit_v1.c  ribbit_v1.h  ribbit_v2.c  ribbit_v2.h
src/tact/: tact_pipe_file.c  tact_pipe_internal.h
